k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-node-app-service
  labels:
    app: sample-node-app
spec:
  type: NodePort # Use NodePort for easy access in minikube
  selector:
    app: sample-node-app
  ports:
    - protocol: TCP
      port: 80 # Service port
      targetPort: 8000 # Container port
      nodePort: 30000 # Optional: You can specify a nodePort, minikube will expose this
